@@ -14,6 +14,9 @@ Version 6.4.16
   - Bugfix: Memory-Leak in der Restschnittstelle behoben
   - Bugfix: Memory-Leak im Zusammenhang mit MySQL gefixt
   - Überflüssige Variablen in Trim-Funktionen der CWString entfernt
+  - Bugfix: Fehler in String::RTrim behoben, durch den zu wenig Zeichen am
+    Ende des Strings abgeschnitten wurden (Backport von PPL7)
+  - Bugfix: Memory Leak und "silly malloc" in CString::PregMatch behoben
 
 Version 6.4.15 vom 30.04.2013	(SVN-Tag: REL_6_4_15)
   - CLog-Klasse unterstützt nun Syslog
